CDV-1233 -- use valueOf() methods for materializing instances of primitive wrapper types. Not only will this allow reference equality to work where expected (eg. Boolean), it can help also save memory too.
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@12440 7fc7bbf3-cf45-46d4-be06-341739edd864